--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           Reset
         </button>
         <button onclick="previewFun()" class="privew-btn animatedelay">
-          Privew
+          Preview
         </button>
         <button onclick="applyFun()" class="apply-btn animatedelay">
           Apply
